style.css
body {
   background-color:#272727;
   color:#5cdb95;
   font-family:'Annie Use Your Telescope',cursive;
   font-size: 16pt;
   margin: 10 auto 10 auto;
}

h1 { 
    border-style:dotted;
    height: 60px;
    vertical-align: middle;
    display:table-cell;
    border-radius: 1em 4em 1em 4em/1em 4em 1em 4em ;
    text-align: center;
    width: 500px;
    margin: 30px auto;
    background-color:darkcyan;
    Padding: 0px 20px 0px 20px 
}

h2 {
    width: 300px;
    border-style:dotted;
    border-radius: 1em 4em 1em 4em/1em 4em 1em 4em ;
    text-align: center;
    margin: 30px auto;
    background-color:darkcyan;
    Padding: 0px 20px 0px 20px 
}

#top1 {
    width:82px;
    height:75px;
}

#top {width: 40px; 
}

#Insertion_Section {
    border-style: dotted;
    border-radius: 1em 4em 1em 4em/1em 4em 1em 4em;
    Padding: 10px 10px 10px 10px; 
}
    
.table {
    margin: auto auto auto;
    text-align: center;
    border-style: dotted;
    color:#5cdb95;
    border-radius: 1em 4em 1em 4em/1em 4em 1em 4em;
    Padding: 20px 40px 20px 40px; 
}  

input {
    border-style: dotted;
    border-radius: 1em 4em 1em 4em/1em 4em 1em 4em ;
    border-color: #5cdb95;
    background-color: darkcyan;
    padding:0px 15px 0px 15px;
    font-weight: bold; 
    font-size: 14px; 
    color:#5cdb95;
    background-color:darkcyan;
    -webkit-transition-duration: 0.4s;
    transition-duration: 0.4s;
}

input:hover {
    background-color:#bd67c9;
}

#due-date {
    float: centre;
    text-decoration:underline;
}

#penguin_image {
    float: centre;
}

